# neurolib

./: .gitignore  README.md  install_requirements.sh  pdf_extract_delete_this.py  pyproject.toml  qiac_dicom2subjects.py  requirements.txt  setup.sh  t1w_preprocessing.py  test.ipynb
src/imagelib/: atlas.py  bids.py  dicom.py  dicom2bids.py  group.py  ipy.py
src/imagelib/analysis/: timeline.py
src/imagelib/bids/: base.py  pipeline.py
src/imagelib/bids/processes/: base.py  constants.py  helper.py  preprocess.py  segment.py
src/imagelib/bids/processes/dataset/: aggregate.py
src/imagelib/bids/processes/scan/: region.py
src/imagelib/datasets/: bids.py  dicom.py  dicom2bids.py  dicom_old.py  event.py  nifti.py
src/imagelib/helpers/: data.py  file.py  generate.py
src/imagelib/metrics/: group.py
src/imagelib/processes/: __init__.py  preprocess.py  segment.py
src/imagelib/processes/region/: dataset.py  scan.py
src/imagelib/resources/: dkt_regions.csv
