[tool.poetry]
name = "imagelib"
version = "0.1.1"
description = ""
authors = ["Mokashi,Chinmay <CMokashi@mdanderson.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
appnope = "0.1.4"
asttokens = "3.0.0"
attrs = "25.3.0"
bids-validator = "1.14.7.post0"
bidsschematools = "1.0.4"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
click = "8.1.8"
comm = "0.2.2"
contourpy = "1.3.1"
cycler = "0.12.1"
debugpy = "1.8.13"
decorator = "5.2.1"
docopt = "0.6.2"
executing = "2.2.0"
fonttools = "4.56.0"
formulaic = "1.1.1"
frozendict = "2.4.6"
fsspec = "2025.3.2"
idna = "3.10"
interface-meta = "1.3.0"
ipykernel = "6.29.5"
ipython = "9.0.2"
ipython-pygments-lexers = "1.1.1"
ipywidgets = "8.1.5"
jedi = "0.19.2"
joblib = "1.4.2"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
jupyterlab-widgets = "3.0.13"
kiwisolver = "1.4.8"
lxml = "5.3.1"
markdown-it-py = "3.0.0"
matplotlib = "3.10.1"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
nest-asyncio = "1.6.0"
nibabel = "5.3.2"
nilearn = "0.11.1"
num2words = "0.5.14"
numpy = "1.26.4"
packaging = "24.2"
pandas = "2.2.3"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "^11.2"
platformdirs = "4.3.7"
prompt-toolkit = "3.0.50"
psutil = "7.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pybids = "0.19.0"
pydantic = "2.11.1"
pydantic-core = "2.33.0"
pydicom = "3.0.1"
pygments = "2.19.1"
pyparsing = "3.2.3"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
pyyaml = "6.0.2"
pyzmq = "26.3.0"
referencing = "0.36.2"
requests = "2.32.3"
rich = "14.0.0"
rpds-py = "0.24.0"
scikit-learn = "1.6.1"
scipy = "1.15.2"
six = "1.17.0"
sqlalchemy = "2.0.40"
stack-data = "0.6.3"
threadpoolctl = "3.6.0"
tornado = "6.4.2"
traitlets = "5.14.3"
typing-inspection = "0.4.0"
typing-extensions = "4.13.0"
tzdata = "2025.2"
universal-pathlib = "0.2.6"
urllib3 = "2.3.0"
wcwidth = "0.2.13"
widgetsnbextension = "4.0.13"
wrapt = "1.17.2"
antspyx = "0.5.4"
antspynet = { version = "0.2.9", optional = true}
patsy = "1.0.1"
statsmodels = "0.14.4"
webcolors = "24.11.1"
"absl-py" = { version = "2.2.2", optional = true}
"astunparse" = { version = "1.6.3", optional = true}
"flatbuffers" = { version = "25.2.10", optional = true}
"gast" = { version = "0.6.0", optional = true}
"google-pasta" = { version = "0.2.0", optional = true}
"grpcio" = { version = "1.71.0", optional = true}
"h5py" = { version = "3.13.0", optional = true}
"keras" = { version = "3.9.2", optional = true}
"libclang" = { version = "18.1.1", optional = true}
"markdown" = { version = "3.7", optional = true}
"markupsafe" = { version = "3.0.2", optional = true}
"ml-dtypes" = { version = "0.4.1", optional = true}
"namex" = { version = "0.0.8", optional = true}
"opt-einsum" = { version = "3.4.0", optional = true}
"optree" = { version = "0.15.0", optional = true}
"protobuf" = { version = "4.25.6", optional = true}
"setuptools" = { version = "78.1.0", optional = true}
"tensorboard" = { version = "2.17.1", optional = true}
"tensorboard-data-server" = { version = "0.7.2", optional = true}
"tensorflow" = { version = "2.17.0", optional = true}
"termcolor" = { version = "3.0.1", optional = true}
"werkzeug" = { version = "3.1.3", optional = true}
"wheel" = { version = "0.46.1", optional = true}

"imageio" = { version = "2.37.0", optional = true}
"lazy_loader" = { version = "0.4", optional = true}
"networkx" = { version = "3.4.2", optional = true}
"scikit-image" = { version = "0.25.2", optional = true}
"tifffile" = { version = "2025.3.30", optional = true}

[tool.poetry.extras]
skimage = [
    "imageio",
    "lazy_loader",
    "networkx",
    "scikit-image",
    "tifffile"
]
antspynet = [
    "antspynet",
    "absl-py",
    "astunparse",
    "flatbuffers",
    "gast",
    "google-pasta",
    "grpcio",
    "h5py",
    "keras",
    "libclang",
    "markdown",
    "markupsafe",
    "ml-dtypes",
    "namex",
    "opt-einsum",
    "optree",
    "protobuf",
    "setuptools",
    "tensorboard",
    "tensorboard-data-server",
    "tensorflow",
    "termcolor",
    "werkzeug",
    "wheel"
    ]  # Define the optional dependency group
all = ["antspynet", "skimage"]  # Include all optional dependencies in the "all" group

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
